Psalms syllabus v3.2.0 - Winter 2021

--- a/HB/HB 3112-Psalms-Driver 2021.tex
+++ b/HB/HB 3112-Psalms-Driver 2021.tex
@@ -1,4 +1,4 @@
-% Copyright (c) 2017 by Daniel R. Driver.
+% Copyright (c) 2021 by Daniel R. Driver.
 % !TEX encoding = UTF-8 Unicode
 % !TEX TS-program = XeLaTeX
 
@@ -11,7 +11,7 @@
 \newcommand\incl{../includes}
 \input{\incl/variables}
 
-\coursecode[3.1.0]{HB 3112}
+\coursecode[3.2.0]{HB 3112}
 \coursetitle[Hebrew Bible]{Psalms in Interpretation}
 
 % Taught as RLGS 3263 (T&I: Psalms in the Christian Tradition) in:
@@ -21,40 +21,35 @@
 %   - Fall 2014
 % Taught as HB 3112 in:
 %   - Winter 2017
+%   - Winter 2021
 
 \professor{Daniel R. Driver}
 \phone{902-425-7051}
 \email{ddriver@astheology.ns.ca}
-\officehours{Tuesdays, 1:30--3:30 \PM}
+\officehours{\href{https://calendly.com/danieldriver}{calendly.com/danieldriver}}
 
-\semester{Winter Term 2017}
+\semester{Winter Term 2021}
 \meets{Tuesdays}% \meets{on}{at}{in}
-      {9:00--11:30 \AM}
-      {One (1)}
-\website{astheology.ns.ca}
+      {10:00--11:30 \AM}
+      {Microsoft Teams}
+\website{danieldriver.com}
 \cdescription{% copy from the current Academic Calendar
-	The Psalms of the Hebrew Bible/Old Testament have a special part in
-	the life of the synagogue and church. A major goal of this course is
-	therefore to gain perspective on how the Psalter has fed and
-	informed Jewish and Christian faith in various periods: in biblical
-	times, Rabbinic and Patristic periods, the Middle Ages, the
-	Reformation, the Enlightenment, and finally the early and late
-	modern periods. By interacting with recent research into the shape
-	and shaping of the Psalter we will also consider the anthology’s
-	arrangement. Study will generally occur in one of two modes. First,
-	secondary reading and class discussion will look at hermeneutical
-	and historical factors involved in reading and understanding the
-	Psalter. Second, seminars will help put theory into practice by
-	featuring about a dozen particular psalms in connection with their
-	reception history.
+	The Psalms have a special place in the life of the synagogue and
+	church. Thus a major goal of this course is to see how the Psalter
+	has fed and informed Jewish and Christian theology in various periods:
+	biblical times, Rabbinic and Patristic periods, the Middle Ages, the
+	Reformation, the Enlightenment, and so on down to modern times. To
+	help understand the anthology’s unique arrangement, the course will
+	also interact with current research into the shape and shaping of
+	the Psalter.
 }% end of course description
 \objectives{% recall Bloom's taxonomy: http://www.celt.iastate.edu/teaching/effective-teaching-practices/revised-blooms-taxonomy
 	By the end of the course students should be able to:
 		report on at least three distinct periods in the reception of the Psalter;
 		analyze key differences between ancient and modern interpreters, and a variety of Jewish and Christian interpreters;
-		interpret a psalm afresh while interacting with its past readers;
-		recite at least twelve verses of a psalm from memory;
-		respond creatively to a psalm in a way that engages with and illuminates the text.
+		formally interpret (exegete) one psalm afresh, informed by its commentary tradition;
+		memorize and recite twelve verses from the Psalter;
+		respond creatively to a psalm so as to illuminate the text in a mode other than academic discourse, e.g. through music, visual arts, poetry, or performance.
 }% end of learning objectives
 
 \input{\incl/preamble}
@@ -69,34 +64,43 @@
 \section{Required Texts \& Materials}
 \label{texts}
 
-The following texts are required. Students are strongly encouraged to
-purchase their own copies. Library copies that are not reference works
-will be placed on a 2-hour reserve.
+The following texts are required. Students are encouraged to
+purchase print copies. Even where eBooks are assigned or available, print books can provide relief from screen time. Many readers find that hard copies can be marked up with greater ease, too.
 
 \begingroup
 \renewcommand{\section}[2]{}% temporarily remove the section heading
-\begin{thebibliography}{Shape \& Shaping}% use the longest item in the bibliography
+\begin{thebibliography}{Brodersen}% use the longest item in the bibliography
 
-	\bibitem[NRSV]{nrsv} M.\,D. Coogan, ed.
-    \emph{New Oxford Annotated Bible with Apocrypha: NRSV}. 4th ed.
-    Oxford / New York: Oxford University Press, 2010.
-    \textsc{isbn} 978-0195289602.
+	\bibitem[Brodersen]{AB17} Alma Brodersen.
+	\emph{The End of the Psalter: Psalms 146–150 in the Masoretic Text, the Dead Sea Scrolls, and the Septuagint}.
+	Waco, TX: Baylor University Press, 2018 (paperback reprint).
+	\textsc{isbn} 978-1481308991.
+	The AST Library also provides \href{https://ebookcentral.proquest.com/lib/astheology/detail.action?docID=4895035}{access to the eBook (BZAW 505; Berlin: Walter de Gruyter, 2017)}.
 
-%	\bibitem[NJPS]{njps}
-%	Adele Berlin and Marc Zvi Brettler, eds.
-%	\emph{The Jewish Study Bible: Second Edition}.
-%	Oxford / New York: Oxford University Press, 2014.
-%	\textsc{isbn} 978-0199978465.
+	\bibitem[Creach]{JC20} Jerome F.\,D. Creach.
+	\emph{Discovering Psalms: Content, Interpretation, Reception}.
+	Grand Rapids: Eerdmans, 2020.
+	\textsc{isbn} 978-0802878069.
+	An eBook is available from the book’s \href{https://spckpublishing.co.uk/discovering-the-psalms}{UK publisher (London: SPCK, 2020)}.
 
-	\bibitem[Shape \& Shaping]{NdeCW} Nancy L. deClaissé-Walford.
-	\emph{The Shape and Shaping of the Book of Psalms: The Current State of Scholarship}.
-	Atlanta: SBL Press, 2014.
-	\textsc{isbn} 978-1628370010.
+	\bibitem[NJPS]{njps}
+	Adele Berlin and Marc Zvi Brettler, eds.
+	\emph{The Jewish Study Bible: Second Edition}.
+	Oxford/New York: Oxford University Press, 2014.
+	\textsc{isbn} 978-0199978465.
+	The first edition of this study Bible (OUP, 2004) or another edition of the NJPS translation of the Tanakh (1985) will suffice, if you already have one to hand. The AST Library offers both through \href{http://www.oxfordbiblicalstudies.com.ezproxy.astheology.ns.ca:2048/article/book/obso-9780195297515/obso-9780195297515-chapter-27}{Oxford Biblical Studies Online}.
 
-	\bibitem[Two Psalms]{SGill} Susan Gillingham.
-	\emph{A Journey of Two Psalms: The Reception of Psalms 1 and 2 in Jewish and Christian Tradition}.
-	Oxford: Oxford University Press, 2014.
-	\textsc{isbn} 978-0199652419.
+% Assigned in 2017; neither were overwhelmingly successful as classroom texts
+%
+%	\bibitem[Shape \& Shaping]{NdeCW} Nancy L. deClaissé-Walford.
+%	\emph{The Shape and Shaping of the Book of Psalms: The Current State of Scholarship}.
+%	Atlanta: SBL Press, 2014.
+%	\textsc{isbn} 978-1628370010.
+%
+%	\bibitem[Two Psalms]{SGill} Susan Gillingham.
+%	\emph{A Journey of Two Psalms: The Reception of Psalms 1 and 2 in Jewish and Christian Tradition}.
+%	Oxford: Oxford University Press, 2014.
+%	\textsc{isbn} 978-0199652419.
 
 %	\bibitem[tk]{tk} tk.
 %	\emph{tk}.
@@ -106,19 +110,14 @@ will be placed on a 2-hour reserve.
 \end{thebibliography}
 \endgroup
 
-An acceptable alternative study Bible is the NJPS: Adele Berlin and Marc
-Zvi Brettler, eds., \emph{The Jewish Study Bible: Second Edition}
-(Oxford / New York: Oxford University Press, 2014). A reference copy is
-available in the library, and it is well worth consulting.
+Other required texts and materials will be posted on Microsoft Teams and/or \href{https://app.perusall.com/courses/hb-3112-psalms-in-interpretation/_/dashboard}{Perusall}, the two main platforms that will facilitate online delivery of this course.
 
 \section{Supplementary Texts}
 \label{supplementary}
 
-Supplementary readings will be recommended throughout the semester.
-Excerpts from this literature may either be placed on reserve or made
-available for download through the course website. Outstanding students
-will also pursue leads on their own, making maximum use of notes and
-bibliographies in the required textbooks.
+Supplementary readings may be recommended throughout the semester.
+Excerpts from this literature will be placed on reserve or made
+available through the course websites.
 
 %The following articles or book chapters represent a range of scholarly
 %and theological interest in the Psalms. They will either be available
@@ -169,12 +168,12 @@ bibliographies in the required textbooks.
 %
 %\end{enumerate}
 
-\begin{multicols}{3}[Major modern commentaries on the Psalms include:]%
+\begin{multicols}{3}[Modern commentaries on the Psalms include:]%
 \footnotesize\noindent
 E. Hengstenberg (\textsuperscript{2}1849--52)\\
 J. Olshausen (1853)\\
-H. Hupfeld (1855--62)\\
 W.\,M.\,L. de Wette (\textsuperscript{5}1856)\\
+H. Hupfeld (1855--62)\\
 F. Delitzsch (1871)\\
 J.\,J.\,S. Perowne (\textsuperscript{7}1890)\\
 J. Wellhausen (\textsuperscript{3}1898)\\
@@ -195,23 +194,67 @@ M.\,J. Dahood (1966--70)\\
 H.-J. Kraus (\textsuperscript{4}1972)\\
 A.\,A. Anderson (1972)\\
 D. Kidner (1975)\\
-J. Rogerson, J. McKay (1977)\\
+J. Rogerson \& J. McKay (1977)\\
 L. Jacquet (1975--79)\\
-P. Craigie, L. Allen (1983)\\
+P. Craigie \& L. Allen (1983)\\
 C. Stuhlmueller (1985)\\
 E. Gerstenberger (1988)\\
-M. Girard (1984--1996)\\
 J. Day (1990)\\
 M. Tate (1990)\\
 A.\,C. Feuer (\textsuperscript{3}1991)\\
+A. Cohen (1992)\\
 J.\,L. Mays (1994)\\
+M. Girard (1984--96)\\
 K. Seybold (1996)\\
 C. Broyles (1999)\\
-F.-L. Hossfeld,\par E. Zenger (1993--2008)\\
+K. Schaefer (2001)\\
+G. Wilson (2002)\\
+R.\,J. Clifford (2002--03)\\
+J. Magonet (\textsuperscript{2}2004)\\
 J.-L. Vesco (2006)\\
-W. Brueggemann,\par W. Bellinger (2014)\\
-M. Oeming, J. Vette (2000--16)
+R. Alter (2007)\\
+J. Goldingay (2006--08)\\
+J.\,H. Eaton (2008)\\
+F.-L. Hossfeld \& E. Zenger\par (2000--08, ET 2005--11)\\
+W.\,P. Brown (2010)\\
+D. Bergant (2013)\\
+B. Peters (2004--14)\\
+T. Longman (2014)\\
+W. Brueggemann \&\par W. Bellinger (2014)\\
+N. DeClaissé-Walford, R. Jacobson \& B. LaNeel Tanner (2014)\\
+A. Ross (2011--16)\\
+M. Oeming \& J. Vette (2000--16)\\
+B. Weber (\textsuperscript{2}2016)\\
+E. Charry (2015) \&\par J. Byassee (2018)\\
+W. Tucker \& J. Grant (2018)\\
+S. Gillingham (2008--18)\\
+B. Waltke, J. Houston \&\par E. Moore (2010--19)\\
+R. Meynet (2017--19)\\
+N. DeClaissé-Walford (2020)
 \end{multicols}
+
+Also, the following reference works are worth owning and consulting.
+\cite{rlgs} in particular contains sound advice on core skills like
+reading religious texts, writing essays and reviews, revising essays,
+making oral presentations, and learning languages.
+
+\begingroup
+\renewcommand{\section}[2]{}% temporarily remove the section heading
+\begin{thebibliography}{Making Sense}% use the longest item in the bibliography
+
+	\bibitem[Making Sense]{rlgs} Northey, Margot, Bradford A. Anderson, and Joel N. Lohr.
+	\emph{Making Sense in Religious Studies: A Student's Guide to Research and Writing}.
+	3rd ed. Toronto: Oxford University Press, 2019. ISBN 978-0199026838.
+
+	\bibitem[SBL2]{sbl2} Collins, Billie Jean, et al.
+	\emph{The SBL Handbook of Style}.
+	2nd ed. Atlanta: SBL Press, 2014. ISBN 978-1589839649.
+	Designed to augment \href{http://www.chicagomanualofstyle.org/home.html}{\emph{Chicago Style}}
+	(the standard at AST), there is also a free
+	\href{https://www.sbl-site.org/assets/pdfs/pubs/SBLHSsupp2015-02.pdf}{Student Supplement for SBL2}.
+
+\end{thebibliography}
+\endgroup
 
 %\begin{multicols}{2}[Commentaries on the Psalms in the AST library include:]%
 %\footnotesize\noindent
@@ -271,30 +314,29 @@ We will adhere to the schedule in \autoref{schedule} as closely as
 possible, though the professor reserves the right to adjust it to suit
 the needs of the class.
 
-\setcolumncount{5}% set up \sessioncount, \unit{}, \noclass{}, and \reminder{memo}{date} macros
+\setcolumncount{4}% set up \sessioncount, \unit{}, \noclass{}, and \reminder{memo}{date} macros
 \begin{table}[htbp]% set to `p' to put the schedule on its own page
   \centering
-  \begin{tabular}{>{\sessioncount.}r@{ }lccr}% make sure the column config agrees with \setcolumncount
+  \begin{tabular}{>{\sessioncount.}r@{ }llr}% make sure the column config agrees with \setcolumncount
 	\toprule
-	\sessionskip{\textbf{\S}.}&\textbf{Seminar}&\textbf{\cite{SGill}}&\textbf{\cite{NdeCW}}&\textbf{Date}\\
+	\sessionskip{\textbf{\S}.}&\textbf{Seminar Text}&\textbf{Secondary Reading}&\textbf{Date}\\
 	\midrule
 
-		& Psalm 1   & Chap. \thesession & deClaissé-Walford      & 10 Jan. \\
-		& Psalm 2   & Chap. \thesession & Wittman                & 17 Jan. \\
-		& Psalm 8   & Chap. \thesession & Nasuti, McCann         & 24 Jan. \\
-		& Psalm 19  & Chap. \thesession & Gerstenberger, Gericke & 31 Jan. \\
-		& Psalm 22  & Chap. \thesession & Jones, Petrany         &  7 Feb. \\
-		& Psalm 49  & Chap. \thesession & Botha, K. Jacobson     & 14 Feb. \\
-	\noclass{Term Break (Monday to Friday)}                      & 21 Feb. \\
-		& Psalm 88  & Chap. \thesession & Ndoga, Magonet         & 28 Feb. \\
-	\noclass{Grad Projects (Tuesday and Wednesday)}              &  7 Mar. \\
-		& Psalm 90  & Chap. \thesession & Tucker                 & 14 Mar. \\
-		& Psalm 110 & Chap. \thesession & Wallace                & 21 Mar. \\
-		& Psalm 118 & Chap. \thesession & Flint                  & 28 Mar. \\
-	\reminder{Exegetical essays are \textbf{due} by the start of the last class}{} \\
-		& Psalm 147 & Chap. \thesession & R. Jacobson            &  4 Apr. \\
-
-	\reminder{End of Term: Final marks are due for all courses}{12 Apr.} \\
+		& Psalm 1   & Driver 2019, 2020        & 12 Jan. \\
+		& Psalm 2   & \cite[chs. 1--2]{JC20}   & 19 Jan. \\
+		& Psalm 8   & \cite[chs. 3--5]{JC20}   & 26 Jan. \\
+		& Psalm 19  & \cite[chs. 6--8]{JC20}   &  2 Feb. \\
+		& Psalm 24  & \cite[ch. 9--end]{JC20}  &  9 Feb. \\
+	\noclass{Term Break (Monday to Friday)}    & 16 Feb. \\
+		& Psalm 34  & \cite[ch. 1]{AB17}       & 23 Feb. \\
+		& Psalm 51  & \cite[ch. 2]{AB17}       &  2 Mar. \\
+		& Psalm 90  & \cite[ch. 3]{AB17}       &  9 Mar. \\
+		& Psalm 104 & \cite[ch. 4]{AB17}       & 16 Mar. \\
+		& Psalm 110 & \cite[ch. 5]{AB17}       & 23 Mar. \\
+		& Psalm 146 & \cite[ch. 6]{AB17}       & 30 Mar. \\
+	\reminder{Exegetical essays are \textbf{due} by the last class}{6 Apr.} \\
+		& Psalm 150 & \cite[ch. 7]{AB17}       &  6 Apr. \\
+	\reminder{End of Term: Final marks are due}{19 Apr.} \\
 
 	\bottomrule
   \end{tabular}
@@ -309,27 +351,8 @@ See the AST website for a list of other \href{http://www.astheology.ns.ca/studen
 
 \begin{enumerate}
 
-	\item The professor will set \textbf{reading prompts} throughout the
-	semester, as often as once a week. Prompts will consist of questions
-	drawn from the secondary reading, and so presuppose that students
-	have read the assigned material carefully. Points may be deducted if
-	it becomes evident that the reading has not been taken seriously.
-
-	\item Students are to \textbf{memorize 12 verses of a psalm} and
-	recite them to the professor privately, in his office, before the
-	end of tenth week of class. Any psalm (or combination of psalms) is
-	allowed unless you have memorized it before.
-
-	\item Students must \textbf{creatively represent one psalm} in the
-	class immediately following that psalm’s workshop (e.g., Psalm 2 in
-	Week 3). Engage as many of the senses as possible, using whatever
-	you can find or create. Be inventive! The only conditions are (a)
-	that you explain or demonstrate a connection with the text studied
-	and (b) that your presentation last between 5 and 8 minutes (plus 2
-	minutes for questions).
-
-	\item The last half of each week's class will be devoted to a
-	\textbf{seminar-style discussion} of an individual psalm. Students
+	\item Each week of class will feature a live (by video conference)
+	\textbf{seminar-style discussion} of one individual psalm. Students
 	will select a commentator for a period of 3--4 weeks, during which
 	time they are responsible to report on the the author's commentary
 	and bring its insight to bear on the seminar discussions. How should
@@ -337,35 +360,81 @@ See the AST website for a list of other \href{http://www.astheology.ns.ca/studen
 
 	\begin{enumerate}
 
-		\item Read the primary seminar text closely and carefully. Look
+		\item Read the week's psalm closely and carefully in the NJPS
+		translation. (Read it in Hebrew if you have the ability.) Look
 		for distinctive words, themes, and images in the psalm, and stay
 		alert to intertextual connections between it and other biblical
 		literature. Jot down your observations.
 
-		\item Consult your commentary. It should be read carefully, too,
-		but after you have got a sense for the psalm on its own. One
-		good approach might be to read the psalm twice, make some
-		preliminary notes, and then study your commentator and fill out
-		your preliminary notes.
+		\item Consult your designated commentary. It should be read
+		carefully, too, but after you have got a sense for the psalm on
+		its own. One good approach might be to read the psalm twice,
+		make some preliminary notes, and then study your commentator and
+		fill out your preliminary notes. Be sure to note any differences
+		between the Hebrew and the version being commented upon, and try
+		to read relevant ancient versions of the psalm in translation or
+		in the original, as you are able. Make select annotations on the
+		week's psalm in Perusall.
 
 		\item Augment your knowledge of each commentary you study by
 		reading about its place in reception history. Key recourses are
-		listed in \autoref{horbib}, below (see especially Magne Sæbø's
-		comprehensive reference work, \emph{HB/OT}). Remember that you
-		will be the resident authority on your chosen commentator.
+		listed in \autoref{horbib}, below (start with reference works
+		like M. Sæbø's \emph{HB/OT} and \emph{EBR Online}). Remember
+		that you will be the resident authority on your chosen
+		commentator.
 
 	\end{enumerate}
 
-	\item Students are to compose an \textbf{exegetical essay} on one of
-	the psalms from the seminar. Consider all the perspectives brought
-	to bear in class on a psalm of your choice, noting anything useful
-	for your discussion, and then dig deeper into the text and its
-	history. Your work should be aided by the preliminary researches of
-	your classmates, but you will need to read more widely on your own;
-	the seminar is only a starting point. You are expected to develop a
-	strong thesis, and to interact with a healthy representation of
-	secondary literature. The final paper is due at the start of the
-	last class.
+
+	\item Discussion of \textbf{secondary reading} will take place
+	asynchronously on \href{https://app.perusall.com/}{Perusal}, a
+	social e-reading platform. Whether you read the assigned texts there
+	or offline first, engage the readings collaboratively by annotating
+	them on Perusall.
+
+	\begin{enumerate}
+
+		\item Prepare for each week by reading the secondary reading
+		(either online or off). Then, spend about one hour per week
+		discussing the material on Perusall. Try to do both tasks before
+		the seminar that week. Top issues may be carried over, briefly,
+		into the live discussions.
+
+		\item Engage in discussion by posting good questions or
+		comments, helping others by answering their questions, and
+		upvoting good questions or comments to draw attention to the
+		most important issues and ideas. Note that this platform takes
+		the place of other discussion forums. Some of the time you spend
+		there counts towards contact hours for this course, too.
+
+	\end{enumerate}
+
+	\item Students will \textbf{memorize 12 verses of a psalm} and
+	recite them to a witness, in person, before the last day of class.
+	Any psalm is allowed except for Psalm 23. You may also choose to
+	memorize verses from a combination of psalms. For instance, you
+	might memorize the first verses (incipits) of the psalms of ascent,
+	Psalms 120–134 (skip three if desired). The witness will sign a form
+	to vouch for your recital.
+
+	\item Students will \textbf{creatively represent one psalm} in the
+	class immediately following that psalm’s workshop (e.g., Psalm 2 in
+	Week 3). Engage as many of the senses as possible, using whatever
+	you can find or create. Be inventive! The only conditions are (a)
+	that you explain or demonstrate a connection with the text studied
+	and (b) that your presentation last between 5 and 8 minutes. Record,
+	upload, and share as a URL.
+
+	\item Finally, students must compose an \textbf{exegetical essay} on
+	one psalm from the seminar. Consider all the perspectives brought to
+	bear in class on a psalm of your choice, noting anything useful for
+	your discussion, and then dig deeper into the text and its history.
+	Your work should be aided by the preliminary researches of your
+	classmates, but you will need to read more widely on your own; the
+	seminar is only a starting point. You are expected to develop a
+	strong thesis, and to interact with a selection of secondary
+	literature in 4,000--5,000 words. The paper is due at the start of
+	the last class.
 
 \end{enumerate}
 
@@ -377,10 +446,10 @@ The breakdown for the semester's total work is shown in
   {\lining
   \begin{tabular}{lr}
     \toprule
-    Reading Promtps         & 15\% \\
+    Seminar Contributions   & 15\% \\
+    Reading Discussion      & 15\% \\
     Psalm Memorization      & 10\% \\
-    Creative Representation & 15\% \\
-    Seminar Contributions   & 20\% \\
+    Creative Representation & 20\% \\
     Final Paper             & 40\% \\
     \bottomrule
   \end{tabular}}
@@ -393,6 +462,14 @@ The breakdown for the semester's total work is shown in
 
 \section{Additional Bibliography}
 \label{bibliography}
+
+Literature on the Psalter is vast. Two exceptional, actively maintained bibliographies are:
+
+\begin{enumerate}
+	\item Annotated: Stephen Breck Reid and Rebecca Poe Hays, “Psalms,” in \emph{Oxford bibliographies Online: Biblical Studies}, \href{https://go.openathens.net/redirector/astheology.ns.ca?url=https://www.oxfordbibliographies.com/view/document/obo-9780195393361/obo-9780195393361-0099.xml}{https://www.oxfordbibliographies.com/view/document/obo-9780195393361/obo-9780195393361-0099.xml} (access at AST through Open Athens). doi: 10.1093/OBO/9780195393361-0099
+	\item Exhaustive: Beat Weber, “BiblioPss1990ff.: Bibliography of Psalms and the Psalter since 1990” (German and English), \href{https://www.academia.edu/5910732/BiblioPss1990ff_Bibliography_of_Psalms_and_the_Psalter_since_1990}{https://bienenberg.academia.edu/BeatWeber} (use the embedded link or browse to his bibliographies).
+
+\end{enumerate}
 
 For the weekly Psalms seminar, students should focus on a commentator
 from the list below and give a short (5 minute) overview of the
@@ -441,7 +518,7 @@ attention to text, translation, and commentary.
  \item Medieval
   \begin{enumerate}
 
-	\item Aquinas, \emph{Postilla super Psalmos / Commentary on the Psalms} (1272--1273). A Latin--English parallel edition for (most of) Psalms 1--54, ed. by Stephen Loughlin, is \href{http://www4.desales.edu/~philtheo/loughlin/ATP/}{online as part of the Aquinas Translation Project}. See also: Thomas Ryan, \emph{Thomas Aquinas as Reader of the Psalms} (Notre Dame: University of Notre Dame Press, 2000).
+	\item Aquinas, \emph{Postilla super Psalmos / Commentary on the Psalms} (1272--1273). A Latin--English parallel edition for (most of) Psalms 1--54, ed. Stephen Loughlin, is \href{http://hosted.desales.edu/w4/philtheo/loughlin/ATP/}{online as part of the Aquinas Translation Project}. See also: Thomas Ryan, \emph{Thomas Aquinas as Reader of the Psalms} (Notre Dame: University of Notre Dame Press, 2000).
 
 	\item \emph{Rashi’s Commentary on Psalms} (trans. Mayer I. Gruber; Leiden: Brill, 2004) [BS 1429 R3713 2007].% See also: Hermann Hailperin, \emph{Rashi and the Christian Scholars} (Pittsburgh: University of Pittsburgh Press, 1963).
 
@@ -461,7 +538,7 @@ attention to text, translation, and commentary.
 
 	\item Select an example from \autoref{supplementary} or nominate an early modern or modern commentator of your own discovery.
 
-	\item If you have modern language skills beyond English, this is an opportunity to put them to use. See the first pages of F.-L. Hossfeld and E. Zenger, \emph{Psalms 2: A Commentary on Psalms 51--100} (Minneapolis: Fortress, 2005), and idem, \emph{Psalms 3: A Commentary on Psalms 101--150} (Minneapolis: Fortress Press, 2011), for lists of commentaries in an array of European languages.
+	\item If you have modern language skills beyond English, this is an opportunity to put them to use. For options in an array of European languages, see \S 2 of  B. Weber's exhaustive bibliography, or consult a good continental commentary. See, for example, the first pages of F.-L. Hossfeld and E. Zenger, \emph{Psalms 2: A Commentary on Psalms 51--100} (Minneapolis: Fortress, 2005), and idem, \emph{Psalms 3: A Commentary on Psalms 101--150} (Minneapolis: Fortress Press, 2011).
 
   \end{enumerate}
 
@@ -472,17 +549,25 @@ attention to text, translation, and commentary.
 
 \begin{itemize}
 
+	\item ArtScroll Tanach Series, 2 vols. (English and Hebrew): Avrohom Chaim Feuer, \emph{Tehillim / Psalms: A New Translation with a Commentary Anthologized from Talmudic, Midrashic, and Rabbinic Sources} (Brooklyn, NY: Mesorah, 1985).
+
 	\item Ancient Christian Commentary on Scripture, OT vols. 7--8:
 	  Craig A. Blaising and Carmen Hardin, eds., \emph{Psalms 1--50} (Downers Grove: InterVarsity Press, 2008);
 	  Quentin F. Wesselschmidt and Thomas C. Oden, eds., \emph{Psalms 51--150} (Downers Grove: InterVarsity Press, 2007).
+
+	\item Reformation Commentary on Scripture, OT vols. 7--8:
+	Herman J. Selderhuis, ed., \emph{Psalms 1--72} (Downers Grove: InterVarsity Press, 2015);
+	Herman J. Selderhuis, ed., \emph{Psalms 73--150} (Downers Grove: InterVarsity Press, 2018).
 
 	\item Willaim Holladay, \emph{The Psalms through Three Thousand Years: Prayerbook of a Cloud of Witnesses} (Minneapolis: Fortress, 1993).
 
 	\item H. Attridge and M. Fassler, eds., \emph{Psalms in Community: Jewish and Christian Textual, Liturgical, and Artistic Traditions} (Leiden: Brill, 2004).
 
-	\item Susan Gillingham, \emph{Psalms Through the Centuries, Vol. 1} (Oxford: Blackwell, 2008) offers an \href{http://www.blackwellpublishing.com/pdf/9780631218555.pdf}{expanded bibliography online (PDF)}. Volume 2 has not yet appeared, but see her \emph{A Journey of Two Psalms: The Reception of Psalms 1 and 2 in Jewish and Christian Tradition} (Oxford: Oxford University Press, 2013) and \emph{Jewish and Christian Approaches to the Psalms: Conflict and Convergence} (Oxford: Oxford University Press, 2013).
+	\item Susan Gillingham, \emph{\href{https://onlinelibrary.wiley.com/doi/book/10.1002/9780470691748}{Psalms Through the Centuries, Vol. 1}} (Oxford: Blackwell, 2008) offers an \href{http://www.blackwellpublishing.com/pdf/9780631218555.pdf}{expanded bibliography online (PDF)}. The first volume pays especial attention to Psalm 8 as a case study. The second, \emph{\href{https://onlinelibrary.wiley.com/doi/book/10.1002/9781118832196}{Psalms Through the Centuries, Vol. 2: A Reception History Commentary on Psalms 1–72}} (Oxford: Wiley-Blackwell, 2018) consolidates and builds on some of her other work, including \emph{A Journey of Two Psalms: The Reception of Psalms 1 and 2 in Jewish and Christian Tradition} (Oxford: Oxford University Press, 2013) and \emph{Jewish and Christian Approaches to the Psalms: Conflict and Convergence} (Oxford: Oxford University Press, 2013).
 
 	\item M. Sæbø, \emph{HB/OT}: For help with specific periods and commentators in biblical reception history see Magne Sæbø, ed., \emph{Hebrew Bible/Old Testament: The History of Its Interpretation} (3 vols.; Göttingen: Vandenhoeck \& Ruprecht, 1996--2015).
+
+	\item C.\,M. Furey et al, eds., \emph{Encyclopedia of the Bible and Its Reception (EBR) Online} (30 vols.; Berlin: De Gruyter, 2009–2024) is an ambitious work still in progress, available: \url{https://db-degruyter-com.eu1.proxy.openathens.net/db/ebr}
 
 \end{itemize}
 
