--- a/includes/title.tex
+++ b/includes/title.tex
@@ -1,5 +1,6 @@
-\ProvidesFile{title.tex}[2018/05/24 v2.1 -- Syllabus title page]
+\ProvidesFile{title.tex}[2020/12/21 v2.2 -- Syllabus title page]
 
+\frenchspacing % doesn't load in preamble, for some reason
 \begin{titlepage}
   \begin{center}
 
@@ -45,7 +46,7 @@
   \label{description}
 
   \cdescrip
-  
+
   \emph{Prerequisites: \lining\cprereqs.}
 
 %  \section{Learning Objectives}
