emend real word to product, h/t Jason Goroncy

--- a/HB/HB 3112-Psalms-Driver 2021.tex
+++ b/HB/HB 3112-Psalms-Driver 2021.tex
@@ -387,7 +387,7 @@ See the AST website for a list of other \href{http://www.astheology.ns.ca/studen
 
 
 	\item Discussion of \textbf{secondary reading} will take place
-	asynchronously on \href{https://app.perusall.com/}{Perusal}, a
+	asynchronously on \href{https://app.perusall.com/}{Perusall}, a
 	social e-reading platform. Whether you read the assigned texts there
 	or offline first, engage the readings collaboratively by annotating
 	them on Perusall.
