tidy up syllabus, bump to v3.2.1

--- a/HB/HB 3112-Psalms-Driver 2021.tex
+++ b/HB/HB 3112-Psalms-Driver 2021.tex
@@ -11,7 +11,7 @@
 \newcommand\incl{../includes}
 \input{\incl/variables}
 
-\coursecode[3.2.0]{HB 3112}
+\coursecode[3.2.1]{HB 3112}
 \coursetitle[Hebrew Bible]{Psalms in Interpretation}
 
 % Taught as RLGS 3263 (T&I: Psalms in the Christian Tradition) in:
@@ -35,8 +35,8 @@
 \website{danieldriver.com}
 \cdescription{% copy from the current Academic Calendar
 	The Psalms have a special place in the life of the synagogue and
-	church. Thus a major goal of this course is to see how the Psalter
-	has fed and informed Jewish and Christian theology in various periods:
+	church. Thus a major goal of this course is to see how select psalms
+	have fed and informed Jewish and Christian theology in various periods:
 	biblical times, Rabbinic and Patristic periods, the Middle Ages, the
 	Reformation, the Enlightenment, and so on down to modern times. To
 	help understand the anthology’s unique arrangement, the course will
@@ -222,8 +222,8 @@ B. Peters (2004--14)\\
 T. Longman (2014)\\
 W. Brueggemann \&\par W. Bellinger (2014)\\
 N. DeClaissé-Walford, R. Jacobson \& B. LaNeel Tanner (2014)\\
-A. Ross (2011--16)\\
 M. Oeming \& J. Vette (2000--16)\\
+A. Ross (2011--16)\\
 B. Weber (\textsuperscript{2}2016)\\
 E. Charry (2015) \&\par J. Byassee (2018)\\
 W. Tucker \& J. Grant (2018)\\
@@ -360,21 +360,16 @@ See the AST website for a list of other \href{http://www.astheology.ns.ca/studen
 
 	\begin{enumerate}
 
-		\item Read the week's psalm closely and carefully in the NJPS
-		translation. (Read it in Hebrew if you have the ability.) Look
-		for distinctive words, themes, and images in the psalm, and stay
-		alert to intertextual connections between it and other biblical
-		literature. Jot down your observations.
-
-		\item Consult your designated commentary. It should be read
-		carefully, too, but after you have got a sense for the psalm on
-		its own. One good approach might be to read the psalm twice,
-		make some preliminary notes, and then study your commentator and
-		fill out your preliminary notes. Be sure to note any differences
-		between the Hebrew and the version being commented upon, and try
-		to read relevant ancient versions of the psalm in translation or
-		in the original, as you are able. Make select annotations on the
-		week's psalm in Perusall.
+l
+		\item Consult your commentary. It should be read carefully, too,
+		but after you have got a sense for the psalm on its own. One
+		good approach might be to read the psalm twice, make some
+		preliminary notes, and then study your commentator and fill out
+		your preliminary notes. Be sure to note any differences between
+		the Hebrew and the version being commented upon, and try to read
+		relevant ancient versions of the psalm in translation or in the
+		original, as you are able. Make select annotations on the week's
+		psalm in Perusall.
 
 		\item Augment your knowledge of each commentary you study by
 		reading about its place in reception history. Key recourses are
@@ -563,11 +558,11 @@ attention to text, translation, and commentary.
 
 	\item H. Attridge and M. Fassler, eds., \emph{Psalms in Community: Jewish and Christian Textual, Liturgical, and Artistic Traditions} (Leiden: Brill, 2004).
 
-	\item Susan Gillingham, \emph{\href{https://onlinelibrary.wiley.com/doi/book/10.1002/9780470691748}{Psalms Through the Centuries, Vol. 1}} (Oxford: Blackwell, 2008) offers an \href{http://www.blackwellpublishing.com/pdf/9780631218555.pdf}{expanded bibliography online (PDF)}. The first volume pays especial attention to Psalm 8 as a case study. The second, \emph{\href{https://onlinelibrary.wiley.com/doi/book/10.1002/9781118832196}{Psalms Through the Centuries, Vol. 2: A Reception History Commentary on Psalms 1–72}} (Oxford: Wiley-Blackwell, 2018) consolidates and builds on some of her other work, including \emph{A Journey of Two Psalms: The Reception of Psalms 1 and 2 in Jewish and Christian Tradition} (Oxford: Oxford University Press, 2013) and \emph{Jewish and Christian Approaches to the Psalms: Conflict and Convergence} (Oxford: Oxford University Press, 2013).
+	\item Susan Gillingham, \emph{\href{https://onlinelibrary.wiley.com/doi/book/10.1002/9780470691748}{Psalms Through the Centuries, Vol. 1}} (Oxford: Blackwell, 2008) offers an \href{http://www.blackwellpublishing.com/pdf/9780631218555.pdf}{expanded bibliography online (PDF)}. The first volume pays especial attention to Psalm 8 as a case study. The second, \emph{\href{https://onlinelibrary.wiley.com/doi/book/10.1002/9781118832196}{Psalms Through the Centuries, Vol. 2: A Reception History Commentary on Psalms 1–72}} (Oxford: Wiley-Blackwell, 2018), consolidates and builds on some of her other work, including \emph{A Journey of Two Psalms: The Reception of Psalms 1 and 2 in Jewish and Christian Tradition} (Oxford: Oxford University Press, 2013) and \emph{Jewish and Christian Approaches to the Psalms: Conflict and Convergence} (Oxford: Oxford University Press, 2013).
 
 	\item M. Sæbø, \emph{HB/OT}: For help with specific periods and commentators in biblical reception history see Magne Sæbø, ed., \emph{Hebrew Bible/Old Testament: The History of Its Interpretation} (3 vols.; Göttingen: Vandenhoeck \& Ruprecht, 1996--2015).
 
-	\item C.\,M. Furey et al, eds., \emph{Encyclopedia of the Bible and Its Reception (EBR) Online} (30 vols.; Berlin: De Gruyter, 2009–2024) is an ambitious work still in progress, available: \url{https://db-degruyter-com.eu1.proxy.openathens.net/db/ebr}
+	\item C.\,M. Furey et al, eds., \emph{\href{https://db-degruyter-com.eu1.proxy.openathens.net/db/ebr}{Encyclopedia of the Bible and Its Reception (EBR) Online}} (30 vols.; Berlin: De Gruyter, 2009–2024) is an ambitious work still in progress.
 
 \end{itemize}
 
