course correction in DSt Hebrew II

--- a/HB/DSt 2061-Hebrew II.tex
+++ b/HB/DSt 2061-Hebrew II.tex
@@ -11,7 +11,7 @@
 \newcommand\incl{../includes}
 \input{\incl/variables}
 
-\coursecode[3.5]{DSt 2061}
+\coursecode[3.5.1]{DSt 2061}
 \coursetitle[Directed Study in Hebrew Bible]{Beginning Biblical Hebrew II}
 
 % Taught as HEBR 2023 in:
@@ -146,16 +146,16 @@ the needs of the class.
     11 & Introduction to Hebrew Verbs       & p. 111 & 12 Jan. \\
     12 & Vowel Changes in Verbs             &        & 19 Jan. \\
     13 & Qal Perfects                       & p. 117 & 26 Jan. \\
-    14 & Qal Imperfects                     & p. 125 &  2 Feb. \\
-    15 & Qal Volitionals                    & p. 133 &  9 Feb. \\
+    13 & Qal Perfects, cont'd               & p. 125 &  2 Feb. \\
+    14 & Qal Imperfects                     & p. 125 &  9 Feb. \\
 	\noclass{Term Break (Monday to Friday)}          & 16 Feb. \\
-    16 & Qal Participles and Infinitives    & p. 141 & 23 Feb. \\
-    17 & Qal Waw Consecutives               & p. 149 &  2 Mar. \\
-    18 & Niphal                             & p. 161 &  9 Mar. \\
-    19 & Piel, Pual, and Hithpael           & p. 169 & 16 Mar. \\
-    20 & Hiphil and Hophal                  & p. 175 & 23 Mar. \\
-    21 & Rare Verb Stems                    &        & 30 Mar. \\
-    22 & Verbs with Object Suffixes         & p. 187 &  6 Apr. \\
+	\noclass{Cancelled for two good reasons}         & 23 Feb. \\
+    14 & Qal Imperfects, cont'd             & p. 125 &  2 Mar. \\
+    15 & Qal Volitionals                    & p. 133 &  9 Mar. \\
+    16 & Qal Participles and Infinitives    & p. 169 & 16 Mar. \\
+    17 & Qal Waw Consecutives               & p. 169 & 23 Mar. \\
+    18 & Niphal                             & p. 169 & 30 Mar. \\
+    19 & Piel, Pual, and Hithpael           & p. 169 &  6 Apr. \\
 	\reminder{End of Term: Final marks are due}{19 Apr.} \\
     \bottomrule
   \end{tabular}
@@ -173,11 +173,11 @@ The grade structure for \ccode has the following elements.
 \begin{enumerate}
  \item
     Students are expected to read and study all \textbf{lessons} in
-    Chapters 11–22 of the \cite{lbh}, and to complete the accompanying
-    \textbf{exercises} in the \cite{work}. Students should use the
-    answer key to correct and evaluate their own work. Assignments will
-    be periodically collected and assessed, largely on the basis of
-    completeness.
+    Chapters 11–19 of the \cite{lbh}, and to complete the accompanying
+    \textbf{exercises} in the \cite{work}, as outlined in the schedule
+    in \autoref{schedule}. Students should use the answer key to correct
+    and evaluate their own work. Assignments will be periodically
+    collected and assessed, largely on the basis of completeness.
  \item
     \textbf{Quizzes} are based on the \cite{lbh} and \cite{work}
     assignments. Some number will be set across the semester, depending
@@ -199,6 +199,10 @@ The grade structure for \ccode has the following elements.
     correct assignment slot on Teams. You will need to scan each one as
     a PDF (strongly preferred) or take a photo of each page with your
     cell phone (if all else fails).
+ \item
+    A \textbf{final creative project} will dramatize the workbook
+    reading in Chapter 19 (a version of Genesis 48), which will be the
+    major focus of tutorial sessions in the last third of the course.
 \end{enumerate}
 
 The breakdown for the semester's total work is shown in
@@ -209,8 +213,9 @@ The breakdown for the semester's total work is shown in
   {\lining
   \begin{tabular}{lr}
     \toprule
-    Workbook & 60\% \\
-    Quizzes  & 40\% \\
+    Workbook      & 40\% \\
+    Quizzes       & 20\% \\
+    Final Project & 40\% \\
     \bottomrule
   \end{tabular}}
   \caption{Distribution of Grades}
